API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

30-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added removeModule to installmgr.cpp, copied from
		Windows InstallMgr.

26-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added first cut of osis2mod using the ESV as a
		basic template.  Works with VerseKey mods
		only and doesn't capture all data.
	Improved verse reference parsing to include proper
		parsing of osisRef attributes and other
		misc. anomalies.
	Returned canon.h back to previous state to
		avoid locale key mismatches

25-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilfuns/utilxml.cpp and test/xmltest which
		include basic xml utility classes
	Added comparison operators to SWBuf so it plays
		nicely with stl containers

19-Feb-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilfuns/swbuf.cpp and tests/swbuftest
	Fixed make system to include osisrtf and osisplain
	Started HUGE task of moving all char **buf over
		to SWBuf &buf

06-Feb-2003	Joachim Ansorg <joachim@ansorgs.de>
	Added ro.conf (Romanian) in locales.d

14-Jan-2003	Joachim Ansorg <joachim@ansorgs.de>
	Added strip filter for the red letter words so users can
		turn it off
	Worked a bit on locales.d/de.conf to include some abbrevs

10-Jan-2003	Terry Biggs <tbiggs@infinet.com>
	Added new osisstrongs and osismorph support to gbfhtml*.

08-Jan-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added new osisstrongs and osismorph option filters.
	Hacked gbfrtf to support, for now:
		the osis <w> tag,
		Removed OSIS <note>...</note>,
		Removed any empty strongs tags for the article.

19-Dec-2002	Joachim Ansorg <joachim@ansorgs.de>
	Removed old russian book locale file, because it wasn't
		working in Linux AND Windows
	Added book locale files (cp1251 and koi8-r) submitted by
		Pavlo Bohmat bohm@ukr.net to support Windows
		and Linux.

30-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added Finnish locale files contributed by Tero